estandarizamos los modulos